info for mobile

--- a/index.html
+++ b/index.html
@@ -59,15 +59,25 @@
 
 <body>
 
-    <div class="w3-content w3-black card-3" style="max-width:1500px;">
+    <div class="w3-content card-3" style="max-width:1500px;">
         <!-- Header with Slideshow -->
         <header class="w3-display-container w3-center">
-            <a href="https://github.com/theYiome/team-advisor/releases" class="w3-hide-large w3-hide-medium"
-                style="text-decoration: inherit;">
-                <button class="w3-button w3-block w3-blue w3-round card-1">
-                    Download for Windows <i class="fa fa-windows"></i>
-                </button>
-            </a>
+            <div class="w3-hide-large w3-hide-medium">
+                <a href="https://github.com/theYiome/team-advisor/releases" style="text-decoration: inherit;">
+                    <button class="w3-button w3-block w3-blue w3-round card-1">
+                        Download for Windows <i class="fa fa-windows"></i>
+                    </button>
+                </a>
+
+                <div class="w3-white card-1 w3-padding">
+                    <h1 class="w3-xlarge">Wondering what to pick when playing <span class="w3-text-blue">League of Legends</span>?</h1>
+                    <hr class="w3-opacity">
+                    <p>
+                        <span class="w3-xlarge"><b>Team Advisor</b> is here to help! 🧐</span><br> Incredible pick
+                        suggesstions, marvelous quality of life features, its easy to use and free!
+                    </p>
+                </div>
+            </div>
 
             <div class="w3-hide-small">
                 <img class="w3-image" src="images/champselectpromo3_blur.jpg" alt="Image 1" width="1500" height="1000">
