--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 </a>
 
                 <div class="w3-white card-1 w3-padding">
-                    <h1 class="w3-xlarge">Wondering what to pick when playing <span class="w3-text-blue">League of Legends</span>?</h1>
+                    <h1 class="w3-xlarge">Wondering what to pick when playing <span class="w3-text-blue">League of
+                            Legends</span>?</h1>
                     <hr class="w3-opacity">
                     <p>
                         <span class="w3-xlarge"><b>Team Advisor</b> is here to help! 🧐</span><br> Incredible pick
@@ -158,7 +159,7 @@
         <div class="w3-padding-64 w3-light-grey card-1">
             <div class="w3-row-padding">
                 <div class="w3-col l4 m6">
-                    <img style="margin-left: 5vw; margin-top: 0.5vw;"
+                    <img style="margin-left: 4vw; margin-top: 0.5vw;"
                         class="w3-image w3-blur w3-round-large w3-hide-small card-2" src="images/app5.png" alt="App"
                         width="250" height="250">
                 </div>
@@ -212,22 +213,25 @@
             </a>
             <div class="w3-section">
                 <span class="w3-xlarge">
-                    <a href="https://github.com/theYiome/team-advisor">
+                    <a href="https://github.com/theYiome/team-advisor" class="w3-hover-text-blue">
                         Check it out on GitHub
+                        <i class="fa fa-github w3-hover-opacity"></i>
                     </a>
-                    <i class="fa fa-github w3-hover-opacity"></i>
                 </span>
             </div>
 
             <hr class="rounded">
 
             <p class="w3-medium">
-                <a href="https://www.flaticon.com/free-stickers/meditation" title="meditation stickers">Meditation
-                    stickers created by Stickers - Flaticon</a>
+                <a href="https://www.flaticon.com/free-stickers/meditation" title="meditation stickers" class="w3-hover-text-orange">
+                    Meditation stickers created by Stickers - Flaticon
+                </a>
             </p>
             <p class="w3-medium">
-                Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"
-                    class="w3-hover-text-green">w3.css</a>
+                Powered by
+                <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">
+                    w3.css
+                </a>
             </p>
 
 
