fix for text hiding under image

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- The App Section -->
         <div class="w3-padding-64 w3-white">
             <div class="w3-row-padding" style="margin-left: 2vw; text-align: left;">
-                <div class="w3-col l8 m6">
+                <div class="w3-col l8 m6" style="position: relative; z-index: 2;">
                     <h1 class="w3-jumbo"><b>Great for teams</b></h1>
                     <h1 class="w3-xxxlarge w3-text-red"><b>OP comps</b></h1>
                     <p>
