--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 </a>
 
                 <div class="w3-white card-1 w3-padding">
-                    <h1 class="w3-xlarge">Wondering what to pick when playing <span class="w3-text-blue">League of
-                            Legends</span>?</h1>
+                    <h1 class="w3-xlarge">Playing <span class="w3-text-blue">League of Legends</span> and wondering what champion would fit the best into your comp?</h1>
                     <hr class="w3-opacity">
                     <p>
                         <span class="w3-xlarge"><b>Team Advisor</b> is here to help! 🧐</span><br> Incredible pick
@@ -104,7 +103,7 @@
 
         </header>
 
-        <div class="w3-padding-64 w3-light-grey card-1">
+        <div class="w3-padding-64 card-1" style="background-color: rgb(255, 253, 240)">
             <div class="w3-row-padding">
                 <div class="w3-col l4 m6">
                     <img style="margin-left: 3vw;" class="w3-image w3-blur w3-round-large w3-hide-small"
@@ -112,7 +111,7 @@
                 </div>
                 <div class="w3-col l8 m6" style="margin-left: -1vw;">
                     <h1 class="w3-jumbo"><b>Build for the Elite</b></h1>
-                    <h1 class="w3-xxxlarge w3-text-blue"><b>Build for you</b></h1>
+                    <h1 class="w3-xxxlarge w3-text-orange"><b>Build for you</b></h1>
                     <p>
                         <span class="w3-large">
                             We felt that apps designed for Elite players are not really there, and we are changing
@@ -126,12 +125,12 @@
             </div>
         </div>
 
-        <div class="w3-padding-64 w3-white card-1">
+        <div class="w3-padding-64 card-1" style="background-color: rgb(235, 255, 232);">
 
             <div class="w3-row-padding" style="margin-left: 2vw; text-align: left;">
                 <div class="w3-col l8 m6">
                     <h1 class="w3-jumbo"><b>Keep your sanity</b></h1>
-                    <h1 class="w3-xxxlarge w3-text-orange"><b>At least some bits 😉</b></h1>
+                    <h1 class="w3-xxxlarge w3-text-green"><b>At least some bits 😉</b></h1>
                     <p>
                         <span class="w3-large">
                             <span class="w3-xlarge"><b>Long queues?</b></span>
@@ -156,7 +155,7 @@
         </div>
 
         <!-- Get what you deserve -->
-        <div class="w3-padding-64 w3-light-grey card-1">
+        <div class="w3-padding-64 card-1" style="background-color: rgb(220, 237, 248);">
             <div class="w3-row-padding">
                 <div class="w3-col l4 m6">
                     <img style="margin-left: 4vw; margin-top: 0.5vw;"
@@ -165,7 +164,7 @@
                 </div>
                 <div class="w3-col l8 m6" style="margin-left: -1vw;">
                     <h1 class="w3-jumbo"><b>Get what you deserve 😎</b></h1>
-                    <h1 class="w3-xxxlarge w3-text-green"><b>Painless climb, it's possible</b></h1>
+                    <h1 class="w3-xxxlarge w3-text-blue"><b>Painless climb, it's possible</b></h1>
                     <p>
                         <span class="w3-large">
                             We remove obstacles, you gain ELO.
@@ -179,7 +178,7 @@
         </div>
 
         <!-- The App Section -->
-        <div class="w3-padding-64 w3-white">
+        <div class="w3-padding-64 card-1" style="background-color: rgb(252, 230, 229);">
             <div class="w3-row-padding" style="margin-left: 2vw; text-align: left;">
                 <div class="w3-col l8 m6" style="position: relative; z-index: 2;">
                     <h1 class="w3-jumbo"><b>Great for teams</b></h1>
