shorter text on download

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <a href="https://github.com/theYiome/team-advisor/releases"
                                 style="text-decoration: inherit;">
                                 <button class="w3-button w3-block w3-blue w3-round card-1">
-                                    Download from GitHub Releases <i class="fa fa-windows"></i>
+                                    Download for Windows <i class="fa fa-windows"></i>
                                 </button>
                             </a>
                         </p>
