--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <!-- Header with Slideshow -->
         <header class="w3-display-container w3-center">
             <div class="w3-hide-large w3-hide-medium">
-                <a href="https://github.com/theYiome/team-advisor/releases" style="text-decoration: inherit;">
+                <a href="https://www.overwolf.com/app/Yiome-Team_Advisor" style="text-decoration: inherit;">
                     <button class="w3-button w3-block w3-blue w3-round card-1">
-                        Download for Windows <i class="fa fa-windows"></i>
+                        Download for Overwolf <img src="images/overwolf_white.png" width="24" height="24" style="margin-top: -8px;">
                     </button>
                 </a>
 
@@ -74,7 +74,7 @@
                     <hr class="w3-opacity">
                     <p>
                         <span class="w3-xlarge"><b>Team Advisor</b> is here to help! 🧐</span><br> Incredible pick
-                        suggesstions, marvelous quality of life features, its easy to use and free!
+                        suggestions, marvelous quality of life features, its easy to use and free!
                     </p>
                 </div>
             </div>
@@ -90,10 +90,10 @@
                             suggesstions, marvelous quality of life features, its easy to use and free!
                         </p>
                         <p>
-                            <a href="https://github.com/theYiome/team-advisor/releases"
+                            <a href="https://www.overwolf.com/app/Yiome-Team_Advisor"
                                 style="text-decoration: inherit;">
                                 <button class="w3-button w3-block w3-blue w3-round card-1">
-                                    Download for Windows <i class="fa fa-windows"></i>
+                                    Download for Overwolf <img src="images/overwolf_white.png" width="24" height="24" style="margin-top: -8px;">
                                 </button>
                             </a>
                         </p>
@@ -116,7 +116,7 @@
                         <span class="w3-large">
                             We felt that apps designed for Elite players are not really there, and we are changing
                             that.<br><br>
-                            Already have <b>establised champion pool</b> and want to know which pick fits best in
+                            Already have <b>established champion pool</b> and want to know which pick fits best in
                             current situation? We get you covered.
                             Want to <b>pick up something new</b>, check out whats strong right now? Yep, we got you!
                         </span>
@@ -187,14 +187,14 @@
                         <span class="w3-large">
                             Build team compositions optimized to current situation.
                             The more people take into consideration recommendations,
-                            the better synegy between your champions.
+                            the better synergy between your champions.
                             And the harder you counter your adversaries 😈
                             <br><br>Irreplaceable companion for 5v5 <b>flex queue</b> or <b>clash</b>!
                         </span>
                     </p>
                 </div>
                 <div class="w3-col l4 m6" style="margin-left: -2vw;">
-                    <img src="images/predictions_top_white.png" class="w3-image w3-right w3-hide-small card-2"
+                    <img src="images/yes.png" class="w3-image w3-right w3-hide-small"
                         width="440" height="440">
                 </div>
             </div>
@@ -203,27 +203,30 @@
 
 
         <!-- Footer -->
-        <footer class="w3-container w3-padding-32 w3-light-grey w3-center w3-xlarge">
-            <a href="https://github.com/theYiome/team-advisor/releases" class="w3-hide-small"
+        <footer class="w3-container w3-padding-32 w3-light-grey w3-center w3-xlarge" style="margin-top: -48px;">
+            <a href="https://www.overwolf.com/app/Yiome-Team_Advisor" class="w3-hide-small"
                 style="text-decoration: inherit;">
                 <button class="w3-button w3-block w3-blue w3-round card-1" style="max-width: 500px; margin: auto;">
-                    Download from GitHub Releases <i class="fa fa-windows"></i>
+                    Download for Overwolf <img src="images/overwolf_white.png" width="32" height="32" style="margin-top: -10px;">
                 </button>
             </a>
-            <div class="w3-section">
+            <!-- <div class="w3-section">
                 <span class="w3-xlarge">
                     <a href="https://github.com/theYiome/team-advisor" class="w3-hover-text-blue">
                         Check it out on GitHub
                         <i class="fa fa-github w3-hover-opacity"></i>
                     </a>
                 </span>
-            </div>
+            </div> -->
 
-            <hr class="rounded">
+            <hr class="rounded" style="margin-top: 16px;">
 
             <p class="w3-medium">
                 <a href="https://www.flaticon.com/free-stickers/meditation" title="meditation stickers" class="w3-hover-text-orange">
                     Meditation stickers created by Stickers - Flaticon
+                </a>
+                <a href="https://www.flaticon.com/free-stickers/pig" title="pig stickers" class="w3-hover-text-orange">
+                    Pig stickers created by SoulGIE - Flaticon
                 </a>
             </p>
             <p class="w3-medium">
